--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,22 +7,24 @@
 <body>
 <div>
     <form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+        <input type="submit" value="Sign Out"/>
+    </form>
 </div>
 <div>
     <form method="post">
-        <input type="text" name="text" placeholder="Введите сообщение">
-        <input type="text" name="tag" placeholder="Тег">
+        <input type="text" name="name" placeholder="Название">
+        <input type="text" name="type" placeholder="Тип">
+        <input type="text" name="price" placeholder="Цена">
         <button type="submit">Добавить!</button>
     </form>
 </div>
-<div>Список сообщений</div>
-<div th:each="message : ${messages}">
-    <a th:text="${message.id}"></a>
-    <b th:text="${message.tag}"></b>
-    <c th:text="${message.text}"></c>
-    <i></i>
+<div>Список продуктов</div>
+<div th:each="product : ${products}">
+    <p>ID: <span th:text="${product.id}"></span></p>
+    <p>Название: <span th:text="${product.name}"></span></p>
+    <p>Тип: <span th:text="${product.type}"></span></p>
+    <p>Цена: <span th:text="${product.price}"></span></p>
+    <hr />
 </div>
 </body>
 </html>
