--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,10 +11,10 @@
     You have been logged out.
 </div>
 <form th:action="@{/login}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><label> Имя пользователя : <input type="text" name="username"/> </label></div>
+    <div><label> Пароль: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
-<a href="/registration">Add new user</a>
+<a href="/registration">Зарегистрироваться</a>
 </body>
 </html>
