--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,8 +12,9 @@
 </div>
 Add new user
 <form th:action="@{/registration}" method="post">
-    <div><label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password: <input type="password" name="password"/> </label></div>
+    <div><label> Имя пользователя : <input type="text" name="username"/> </label></div>
+    <div><label>Номер телефона: <input type="text" name="phone"/></label></div>
+    <div><label> Пароль: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
