--- a/src/main/resources/templates/admin_user_list.html
+++ b/src/main/resources/templates/admin_user_list.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>List of users</title>
+    <title>List of Users</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Список пользователей</h1>
-    <table>
-        <thead>
-        <tr>
-            <th>Имя</th>
-            <th>Номер телефона</th>
-            <th>Роль</th>
-            <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user : ${users}">
-            <td th:text="${user.username}">Username</td>
-            <td th:text="${user.phone}">Phone</td>
-            <td th:text="${#strings.arrayJoin(user.roles, ', ')}">Role</td>
-            <td>
-                <a th:href="@{/user/{id}(id=${user.id})}">edit</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<div th:insert="~{fragments/header :: header}"></div>
+
+<div class="container my-4">
+    <div class="card shadow-lg rounded-5 border-0">
+        <div class="card-header bg-dark text-white text-center rounded-top-5">
+            <h2 class="mb-0">Список пользователей</h2>
+        </div>
+        <div class="card-body p-4">
+            <div class="table-responsive">
+                <table class="table table-borderless align-middle mb-0">
+                    <thead>
+                    <tr class="bg-light text-secondary">
+                        <th scope="col">Имя</th>
+                        <th scope="col">Номер телефона</th>
+                        <th scope="col">Роль</th>
+                        <th scope="col" class="text-end">Действия</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="user : ${users}" class="border-bottom">
+                        <td th:text="${user.username}">Username</td>
+                        <td th:text="${user.phone}">Phone</td>
+                        <td th:text="${#strings.arrayJoin(user.roles, ', ')}">Role</td>
+                        <td class="text-end">
+                            <a th:href="@{/user/{id}(id=${user.id})}" class="btn btn-outline-primary btn-sm">Редактировать</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
