--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Provider</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
+<div th:insert="~{fragments/header :: header}"></div>
 <div>
     <form th:action="@{/logout}" method="post">
         <input type="submit" value="Sign Out"/>
     </form>
     <span><a th:href="@{/user}">Список пользователей</a></span>
+    <span><a th:href="@{/addproduct}">Добавить услугу</a></span>
 </div>
-<div>
-    <form th:action="@{/main}" method="post">
-        <input type="text" name="name" placeholder="Название">
-        <input type="text" name="type" placeholder="Тип">
-        <input type="text" name="price" placeholder="Цена">
-        <button type="submit">Добавить!</button>
-    </form>
-</div>
-<div>Список продуктов</div>
-<div th:each="product : ${products}">
-    <p>ID: <span th:text="${product.id}"></span></p>
-    <p>Название: <span th:text="${product.name}"></span></p>
-    <p>Тип: <span th:text="${product.type}"></span></p>
-    <p>Цена: <span th:text="${product.price}"></span></p>
-    <hr />
-</div>
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
