--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,3 @@
-<!-- src/main/resources/templates/fragments/header.html -->
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
@@ -13,7 +12,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="/">Домашняя страница</a>
         </li>
@@ -24,13 +23,23 @@
           <a class="nav-link" href="/information">О нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/">Корзина</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/login">Профиль</a>
+          <a class="nav-link" href="/basket">Корзина</a>
         </li>
         <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
           <a class="nav-link" href="/main">Панель администратора</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+          <a class="nav-link" href="/user/profile">Профиль</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item" sec:authorize="isAnonymous()">
+          <a class="btn btn-outline-primary" href="/login">Войти</a>
+        </li>
+        <li class="nav-item" sec:authorize="isAuthenticated()">
+          <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-outline-danger">Выйти</button>
+          </form>
         </li>
       </ul>
     </div>
