--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8">
+  <title>Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
+<div th:insert="~{fragments/header :: header}"></div>
 
+<div class="container mt-4">
+  <h5 th:text="${username}">Имя пользователя</h5>
+
+  <form method="post" th:action="@{/user/profile}">
+
+    <div class="form-group row mb-3">
+      <label class="col-sm-2 col-form-label">Имя пользователя:</label>
+      <div class="col-sm-6">
+        <input type="text" name="username" th:value="${username ?: ''}" class="form-control" placeholder="Имя пользователя" />
+      </div>
+    </div>
+
+    <div class="form-group row mb-3">
+      <label class="col-sm-2 col-form-label">Пароль:</label>
+      <div class="col-sm-6">
+        <input type="password" name="password" class="form-control" placeholder="Password" />
+      </div>
+    </div>
+
+    <div class="form-group row mb-3">
+      <label class="col-sm-2 col-form-label">Номер телефона:</label>
+      <div class="col-sm-6">
+        <input type="text" name="phone" class="form-control" placeholder="номер телефона" th:value="${phone ?: ''}" />
+      </div>
+    </div>
+
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
+
+    <button class="btn btn-primary" type="submit">Сохранить</button>
+  </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
