--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
-  <title>Page</title>
+  <title>Профиль пользователя</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
@@ -12,7 +12,6 @@
   <h5 th:text="${username}">Имя пользователя</h5>
 
   <form method="post" th:action="@{/user/profile}">
-
     <div class="form-group row mb-3">
       <label class="col-sm-2 col-form-label">Имя пользователя:</label>
       <div class="col-sm-6">
@@ -23,14 +22,14 @@
     <div class="form-group row mb-3">
       <label class="col-sm-2 col-form-label">Пароль:</label>
       <div class="col-sm-6">
-        <input type="password" name="password" class="form-control" placeholder="Password" />
+        <input type="password" name="password" class="form-control" placeholder="Пароль" />
       </div>
     </div>
 
     <div class="form-group row mb-3">
       <label class="col-sm-2 col-form-label">Номер телефона:</label>
       <div class="col-sm-6">
-        <input type="text" name="phone" class="form-control" placeholder="номер телефона" th:value="${phone ?: ''}" />
+        <input type="text" name="phone" class="form-control" placeholder="Номер телефона" th:value="${phone ?: ''}" />
       </div>
     </div>
 
@@ -38,8 +37,42 @@
 
     <button class="btn btn-primary" type="submit">Сохранить</button>
   </form>
+
+  <h2 class="my-5">Ваши заказы</h2>
+
+  <div th:if="${orders != null && orders.size() > 0}">
+    <div class="row">
+      <div class="col-md-4 mb-4" th:each="order : ${orders}">
+        <div class="card d-flex" style="height: 100%">
+          <div class="card-body d-flex flex-column">
+            <h5 class="card-title">Номер заказа: <span th:text="${order.id}">1</span></h5>
+            <p><strong>Дата:</strong> <span th:text="${order.time}">2024-11-17 22:18:53</span></p>
+
+            <h6 class="mt-3">Список услуг:</h6>
+            <ul>
+              <li th:each="product : ${order.products}" th:text="${product.name}">Продукт</li>
+            </ul>
+
+            <!-- Кнопка оставить отзыв -->
+            <div class="mt-auto">
+              <a href="#" class="btn btn-primary w-100">Оставить отзыв</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <div th:if="${orders == null || orders.size() == 0}" class="mt-3">
+    <p>У вас нет заказов.</p>
+  </div>
+
+
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
