Add css files and redesign some pages

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -12,6 +12,7 @@
 <div>
     <span><a th:href="@{/user}">Список пользователей</a></span>
     <span><a th:href="@{/addproduct}">Добавить услугу</a></span>
+    <span><a th:href="@{/admin_product_list}">Список услуг</a></span>
 </div>
 
 
