Add footer and change header

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -14,10 +14,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Домашняя страница</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/productslist">Услуги</a>
+          <a class="nav-link active" href="/productslist">Услуги</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/information">О нас</a>
