--- a/src/main/resources/templates/greeting.html
+++ b/src/main/resources/templates/greeting.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="/greeting.css">
 </head>
 <body>
-<div th:insert="~{fragments/header :: header}"></div>
+<div class="wrapper">
+    <!-- Хедер -->
+    <div th:insert="~{fragments/header :: header}"></div>
 
+    <!-- Основной контент -->
+    <div class="content">
+        <!-- Здесь будет ваш основной контент -->
+        <div class="container">
+            <h1>Добро пожаловать в NovaNet!</h1>
+            <p>Основной контент страницы.</p>
+        </div>
+    </div>
+
+    <!-- Футер -->
+    <div th:insert="~{fragments/footer :: footer}"></div>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
