--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -15,7 +15,7 @@
   <!-- Основной контент -->
   <div class="content">
     <div class="container my-5">
-      <h2 class="text-center text-primary mb-4">Ваша корзина</h2>
+      <h2 class="text-center text-dark mb-4">Ваша корзина</h2>
 
       <div th:if="${cart != null and cart.size() > 0}">
         <div class="row g-4">
