--- a/src/main/resources/templates/admin_add_product.html
+++ b/src/main/resources/templates/admin_add_product.html
@@ -5,18 +5,47 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="/admin_add.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
-<div>
-  <form th:action="@{/main}" method="post" enctype="multipart/form-data">
-    <input type="text" name="name" placeholder="Название">
-    <input type="text" name="type" placeholder="Тип">
-    <input type="text" name="price" placeholder="Цена">
-    <input type="text" name="description" placeholder="Описание">
-    <input type="file" name="file">
-    <button type="submit">Добавить!</button>
+
+<div class="container mt-5">
+  <h1 class="text-center mb-4">Добавить новый продукт</h1>
+  <form th:action="@{/addproduct}" method="post" enctype="multipart/form-data" class="shadow p-4 rounded bg-white">
+    <div class="mb-3">
+      <label for="name" class="form-label">Название</label>
+      <input type="text" class="form-control" id="name" name="name" placeholder="Название" required>
+    </div>
+    <div class="mb-3">
+      <label for="type" class="form-label">Тип</label>
+      <input type="text" class="form-control" id="type" name="type" placeholder="Тип" required>
+    </div>
+    <div class="mb-3">
+      <label for="price" class="form-label">Цена</label>
+      <input type="text" class="form-control" id="price" name="price" placeholder="Цена" required>
+    </div>
+    <div class="mb-3">
+      <label for="description" class="form-label">Описание</label>
+      <input type="text" class="form-control" id="description" name="description" placeholder="Описание" required>
+    </div>
+    <div class="mb-3">
+      <label for="file" class="form-label">Изображение</label>
+      <input type="file" class="form-control" id="file" name="file" required>
+    </div>
+    <div class="d-grid">
+      <button type="submit" class="btn btn-outline-primary">Добавить!</button>
+    </div>
   </form>
+
+  <!-- Ссылки и блоки -->
+  <div class="mt-4 text-center">
+    <div class="d-flex justify-content-center gap-3">
+      <a href="/productslist" class="text-decoration-none text-dark">Мои продукты</a>
+      <a href="/main" class="text-decoration-none text-dark">Управление</a>
+    </div>
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
