--- a/src/main/resources/templates/admin_feedback_list.html
+++ b/src/main/resources/templates/admin_feedback_list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Список продуктов</title>
+  <title>Список отзывов</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -13,7 +13,7 @@
 <div class="container my-4">
   <div class="card shadow-lg rounded-5 border-0">
     <div class="card-header bg-white text-white text-center rounded-top-5">
-      <h2 class="mb-0" style="color: #000000;">Список продуктов</h2>
+      <h2 class="mb-0" style="color: #000000;">Список отзывов</h2>
     </div>
     <div class="card-body p-4">
       <div class="table-responsive">
@@ -21,23 +21,22 @@
           <thead>
           <tr class="bg-light text-secondary">
             <th scope="col">ID</th>
-            <th scope="col">Название</th>
-            <th scope="col">Цена</th>
             <th scope="col">Описание</th>
+            <th scope="col">Оценка</th>
+            <th scope="col">ID пользователя</th>
             <th scope="col" class="text-end">Действия</th>
           </tr>
           </thead>
           <tbody>
-          <tr th:each="product : ${products}" class="border-bottom">
-            <td th:text="${product.id}">1</td>
-            <td th:text="${product.name}">Название</td>
-            <td th:text="${product.price}">100</td>
-            <td th:text="${product.description}">Описание</td>
+          <tr th:each="feedback : ${feedbacks}" class="border-bottom">
+            <td th:text="${feedback.id}">1</td>
+            <td th:text="${feedback.description}">Отзыв</td>
+            <td th:text="${feedback.mark}">5</td>
+            <td th:text="${feedback.user.id}">123</td>
             <td class="text-end">
-              <a th:href="@{/admin_product_list/edit/{id}(id=${product.id})}"
-                 class="btn btn-outline-primary btn-sm me-2">Редактировать</a>
-              <form th:action="@{/admin_product_list/delete/{id}(id=${product.id})}"
+              <form th:action="@{/feedback/delete/{feedbackId}(feedbackId=${feedback.id})}"
                     method="post" style="display:inline;">
+                <input type="hidden" name="_csrf" th:value="${_csrf.token}" />
                 <button type="submit" class="btn btn-outline-danger btn-sm">Удалить</button>
               </form>
             </td>
