--- a/src/main/resources/templates/admin_user_list.html
+++ b/src/main/resources/templates/admin_user_list.html
@@ -5,14 +5,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/admin.css">
 </head>
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
 
 <div class="container my-4">
     <div class="card shadow-lg rounded-5 border-0">
-        <div class="card-header bg-dark text-white text-center rounded-top-5">
-            <h2 class="mb-0">Список пользователей</h2>
+        <div class="card-header bg-white text-white text-center rounded-top-5">
+            <h2 class="mb-0" style="color: #000000;">Список пользователей</h2>
         </div>
         <div class="card-body p-4">
             <div class="table-responsive">
@@ -38,6 +39,12 @@
                 </table>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="mt-4 text-center">
+    <div class="d-flex justify-content-center gap-3">
+        <a href="/main" class="text-decoration-none text-dark">Управление</a>
     </div>
 </div>
 
