--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spring Security Example</title>
+    <title>Авторизация</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/auntification.css">
 </head>
-<body class="bg-light d-flex align-items-center" style="height: 100vh;">
+<body>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
-            <div class="card shadow-sm">
-                <div class="card-header text-center">
-                    <a class="mb-0" href="/">NovaNet</a>
+            <div class="card">
+                <div class="card-header">
+                    <a href="/" class="text-white">NovaNet</a>
                 </div>
                 <div class="card-body">
                     <div th:if="${param.error}" class="alert alert-danger text-center" role="alert">
@@ -36,7 +37,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="card-footer text-center">
+                <div class="card-footer">
                     <p class="mb-0">Нет аккаунта? <a href="/registration">Зарегистрироваться</a></p>
                 </div>
             </div>
