--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,15 +9,20 @@
 </head>
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
-<div>
-    <span><a th:href="@{/user}">Список пользователей</a></span>
-    <span><a th:href="@{/addproduct}">Добавить услугу</a></span>
-    <span><a th:href="@{/admin_product_list}">Список услуг</a></span>
+<div class="container">
+    <div class="text-center">
+        <h1 class="my-4">Добро пожаловать на панель управления!</h1>
+        <p>Выберите одну из опций ниже:</p>
+    </div>
+
+    <!-- Ссылки на другие страницы -->
+    <div class="nav-links">
+        <a th:href="@{/user}" class="btn btn-outline-primary">Список пользователей</a>
+        <a th:href="@{/admin_product_list}" class="btn btn-outline-secondary">Список услуг</a>
+        <a th:href="@{/addproduct}" class="btn btn-outline-secondary">Добавить услугу</a>
+        <a th:href="@{/feedback/list}" class="btn btn-outline-secondary">Список отзывов</a>
+    </div>
 </div>
-
-
-
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
