--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -21,6 +21,7 @@
         <a th:href="@{/admin_product_list}" class="btn btn-outline-secondary">Список услуг</a>
         <a th:href="@{/addproduct}" class="btn btn-outline-secondary">Добавить услугу</a>
         <a th:href="@{/feedback/list}" class="btn btn-outline-secondary">Список отзывов</a>
+        <a th:href="@{/orders}" class="btn btn-outline-secondary">Список заказов</a>
     </div>
 </div>
 
