--- a/src/main/resources/static/basket.css
+++ b/src/main/resources/static/basket.css
@@ -63,3 +63,28 @@ html, body {
                      outline: none;
                      box-shadow: 0 0 0 0.2rem rgba(255, 105, 97, 0.5); /* Красноватая подсветка */
                  }
+
+                  .btn-success {
+                             background-color: #77DD77; /* Светло-зеленый цвет */
+                             border-color: #77DD77; /* Светло-зеленый цвет */
+                             border-radius: 50px; /* Закругленные края */
+                             padding: 0.75rem 1.25rem;
+                             font-weight: 600;
+                             color: #fff; /* Белый текст для контраста */
+                             transition: all 0.3s ease; /* Плавный переход для hover */
+                             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Легкая тень */
+                         }
+
+                         /* Эффект наведения */
+                         .btn-success:hover {
+                             background-color: #32CD32; /* Более насыщенный зеленый */
+                             border-color: #32CD32; /* Более насыщенный зеленый */
+                             transform: scale(1.05); /* Легкое увеличение */
+                             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15); /* Более глубокая тень */
+                         }
+
+                         /* Убираем стандартный outline при фокусе */
+                         .btn-success:focus {
+                             outline: none;
+                             box-shadow: 0 0 0 0.2rem rgba(119, 221, 119, 0.5); /* Зеленоватая подсветка */
+                         }
