--- a/src/main/resources/templates/admin_add_product.html
+++ b/src/main/resources/templates/admin_add_product.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>StartPage</title>
+  <title>Добавить продукт</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -18,17 +18,23 @@
       <label for="name" class="form-label">Название</label>
       <input type="text" class="form-control" id="name" name="name" placeholder="Название" required>
     </div>
+    <div th:if="${errorMessage}" class="alert alert-danger">
+      <p th:text="${errorMessage}"></p>
+    </div>
     <div class="mb-3">
       <label for="type" class="form-label">Тип</label>
-      <input type="text" class="form-control" id="type" name="type" placeholder="Тип" required>
+      <select id="type" class="form-select" name="type" required>
+        <option th:each="type : ${T(org.example.domain.Type).values()}"
+                th:value="${type}" th:text="${type}">Тип</option>
+      </select>
     </div>
     <div class="mb-3">
       <label for="price" class="form-label">Цена</label>
-      <input type="text" class="form-control" id="price" name="price" placeholder="Цена" required>
+      <input type="number" class="form-control" id="price" name="price" placeholder="Цена" required>
     </div>
     <div class="mb-3">
       <label for="description" class="form-label">Описание</label>
-      <input type="text" class="form-control" id="description" name="description" placeholder="Описание" required>
+      <textarea class="form-control" id="description" name="description" placeholder="Описание" rows="3" required></textarea>
     </div>
     <div class="mb-3">
       <label for="file" class="form-label">Изображение</label>
