--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -3,6 +3,7 @@
 <head>
     <title>Добавить отзыв</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/feedback.css">
 </head>
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
