--- a/src/main/resources/templates/select_product_for_feedback.html
+++ b/src/main/resources/templates/select_product_for_feedback.html
@@ -3,27 +3,30 @@
 <head>
   <title>Выбор продукта</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="/feedback.css">
 </head>
 <body>
-<div th:insert="~{fragments/header :: header}"></div>
+<div class="wrapper">
+  <div th:insert="~{fragments/header :: header}"></div>
 
-<div class="container mt-5">
-  <h2 class="text-center text-primary">Выберите продукт для отзыва</h2>
-  <div class="row">
-    <div class="col-md-4 mb-4" th:each="product : ${products}">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title" th:text="${product.name}">Продукт</h5>
-          <p th:text="${product.description}">Описание продукта</p>
-          <a th:href="@{/feedback/add-product/{productId}(productId=${product.id})}" class="btn btn-primary w-100">
-            Оставить отзыв
-          </a>
+  <div class="container mt-5">
+    <h2 class="text-center text-dark mb-3">Выберите продукт для отзыва</h2>
+    <div class="row">
+      <div class="col-md-4 mb-4" th:each="product : ${products}">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title" th:text="${product.name}">Продукт</h5>
+            <p th:text="${product.description}">Описание продукта</p>
+            <a th:href="@{/feedback/add-feedback/{productId}(productId=${product.id})}" class="btn btn-primary w-100">
+              Оставить отзыв
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div th:insert="~{fragments/footer :: footer}"></div>
+  <div th:insert="~{fragments/footer :: footer}"></div>
+</div>
 </body>
 </html>
