Do a lot of frontend

--- a/src/main/resources/static/greeting.css
+++ b/src/main/resources/static/greeting.css
@@ -64,3 +64,17 @@ html, body {
                  outline: none;
                  box-shadow: 0 0 0 0.2rem rgba(255, 105, 97, 0.5); /* Красноватая подсветка */
              }
+
+             .carousel-inner img {
+                 width: 100%; /* Полная ширина контейнера */
+                 height: 400px; /* Фиксированная высота */
+                 object-fit: cover; /* Обрезает изображение для сохранения пропорций */
+             }
+
+.fixed-img {
+    width: 100%; /* Изображение займет всю ширину контейнера */
+    height: 300px; /* Фиксированная высота */
+    object-fit: cover; /* Масштабирование изображения, чтобы заполнить блок без искажения */
+    border-radius: 0.5rem; /* Сохранение закругленных краев */
+}
+
