--- a/src/main/resources/static/product_list.css
+++ b/src/main/resources/static/product_list.css
@@ -1,14 +1,3 @@
-.product-card {
-        min-height: 250px !important; /* Увеличиваем высоту карточки */
-    }
-    .product-description {
-        width: 60% !important; /* Ширина блока с описанием */
-    }
-    .product-image {
-        width: 40% !important; /* Ширина блока с изображением */
-        max-width: 200px !important; /* Максимальная ширина изображения */
-    }
-
     .btn {
             background-color: #B9E4F7; /* Указанный цвет */
             border-color: #B9E4F7; /* Указанный цвет */
@@ -58,3 +47,27 @@
                      outline: none;
                      box-shadow: 0 0 0 0.2rem rgba(255, 105, 97, 0.5); /* Красноватая подсветка */
                  }
+.fixed-img {
+    width: 100%; /* Изображение займет всю ширину контейнера */
+    height: 300px; /* Фиксированная высота */
+    object-fit: cover; /* Масштабирование изображения, чтобы заполнить блок без искажения */
+    border-radius: 0.5rem; /* Сохранение закругленных краев */
+}
+
+
+.product-card {
+    margin-bottom: 1rem; /* Отступ между карточками */
+    min-height: 250px; /* Фиксированная минимальная высота карточки */
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.product-card:hover {
+    transform: scale(1.02);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+}
+
+
+
+
+
+
