--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="/basket.css">
 </head>
 <body>
@@ -48,7 +49,7 @@
 
       <div th:if="${cart == null or cart.size() == 0}" class="text-center my-5">
         <p class="h5 text-muted">Ваша корзина пуста. Добавьте товары, чтобы оформить заказ!</p>
-        <a th:href="@{/productslist}" class="btn btn-primary">Перейти к продуктам</a>
+        <a th:href="@{/productslist}" class="btn btn-primary">Перейти к услугам</a>
       </div>
 
       <div th:if="${errorMessage != null}" class="alert alert-danger mt-4">
