--- a/src/main/resources/templates/feedback.html
+++ b/src/main/resources/templates/feedback.html
@@ -3,12 +3,13 @@
 <head>
     <title>Добавить отзыв</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="/feedback.css">
 </head>
 <body>
 <div th:insert="~{fragments/header :: header}"></div>
 <div class="container mt-5">
-    <h2 class="text-center text-primary">Оставить отзыв</h2>
+    <h2 class="text-center text-dark">Оставить отзыв</h2>
     <form th:action="@{/feedback/add}" method="post" class="mt-4">
         <input type="hidden" name="productId" th:value="${product.id}" />
         <div class="mb-3">
