--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -3,6 +3,8 @@
 <head>
   <title>Header</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Подключение Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
 <nav th:fragment="header" class="navbar navbar-expand-lg bg-body-tertiary">
@@ -14,28 +16,28 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="/productslist">Услуги</a>
+          <a class="nav-link active" href="/productslist"><i class="bi bi-gear"></i> Услуги</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/information">О нас</a>
+          <a class="nav-link" href="/information"><i class="bi bi-info-circle"></i> О нас</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/basket">Корзина</a>
+          <a class="nav-link" href="/basket"><i class="bi bi-cart"></i> Корзина</a>
         </li>
         <li class="nav-item" sec:authorize="hasAuthority('ADMIN')">
-          <a class="nav-link" href="/main">Панель администратора</a>
+          <a class="nav-link" href="/main"><i class="bi bi-ui-radios-grid"></i> Панель администратора</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
-          <a class="nav-link" href="/user/profile">Профиль</a>
+          <a class="nav-link" href="/user/profile"><i class="bi bi-person-circle"></i> Профиль</a>
         </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item" sec:authorize="isAnonymous()">
-          <a class="btn btn-outline-primary" href="/login">Войти</a>
+          <a class="btn btn-outline-primary" href="/login"><i class="bi bi-box-arrow-in-right"></i> Войти</a>
         </li>
         <li class="nav-item" sec:authorize="isAuthenticated()">
           <form th:action="@{/logout}" method="post">
-            <button type="submit" class="btn btn-outline-danger">Выйти</button>
+            <button type="submit" class="btn btn-outline-danger"><i class="bi bi-box-arrow-right"></i> Выйти</button>
           </form>
         </li>
       </ul>
