--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Профиль пользователя</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
   <link rel="stylesheet" href="/profile.css">
 </head>
 <body>
@@ -79,7 +80,7 @@
 </div>
 
 <div th:if="${orders == null || orders.size() == 0}" class="mt-3">
-  <p>У вас нет заказов.</p>
+  <p class="text-center">У вас нет заказов.</p>
 </div>
 
 <div th:insert="~{fragments/footer :: footer}"></div>
